# platform-core

./: .gitignore
.github/workflows/: pulumi-app-dev.yaml  pulumi-sandbox.yaml  pulumi.yaml
pulumi/: Pulumi.app-dev.yaml  Pulumi.platform-sandbox.yaml  Pulumi.yaml  __main__.py  pyproject.toml
pulumi/.pulumi/kind/: platform-sandbox.yaml
pulumi/modules/: cluster.py  flux.py  network.py
scripts/: flux_reconcile.sh  start-runner.sh
smoke/: gateway_job.yaml  http-gateway.yaml  nginx.yaml
tests/: infrastructure.bats
